# StormByte-StageManager-Qt

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
lib/: CMakeLists.txt  Compressor.cpp  Compressor.h  File.cpp  File.h  Linux.cpp  Linux.h  System.h
system/: Action.cpp  Action.h  Compress.cpp  Compress.h  CompressionAction.cpp  CompressionAction.h  Cp.cpp  Cp.h  Mkdir.cpp  Mkdir.h  Mount.cpp  Mount.h  Rm.cpp  Rm.h  Settings.cpp  Settings.h  Umount.cpp  Umount.h  Uncompress.cpp  Uncompress.h
ui/: Application.cpp  Application.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  ProcessTabWidget.cpp  ProcessTabWidget.h  ProcessWidget.cpp  ProcessWidget.h  ProcessWidget.ui  SettingsWindow.cpp  SettingsWindow.h  SettingsWindow.ui  SystemTray.cpp  SystemTray.h  SystemTrayMenu.cpp  SystemTrayMenu.h  main.cpp
